--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,12 @@
 # On STAGE/PROD use always
 DOCKER_RESTART_POLICY="no"
-DOCKER_NETWORK=traefik-local
+DOCKER_NETWORK=platypusbox-docker-net01
+ELASTIC_NETWORK=elastic
 
 STAGE=development
 APP_ID=platel
 APP_HOST=pt
 HOST_NICK=pt
-INT_NETWORK=platel
-CEREBRO_CERTNAME=cerebro.${APP_HOST}.${INT_NETWORK}/cerebro.${APP_HOST}.${INT_NETWORK}
 
 STACK_VERSION=8.5.2
 STV=c13f91
@@ -22,16 +21,22 @@ APM_PASSWORD=changeme
 LICENSE=basic
 ES_NODES=es01,es02
 KIBANA_HOST=kibana.eliasondrej.com
-ES01_JAVA_OPTS="-Xms300m -Xmx300m"
-ES02_JAVA_OPTS="-Xms300m -Xmx300m"
+ES01_JAVA_OPTS="-Xms400m -Xmx400m"
+ES02_JAVA_OPTS="-Xms400m -Xmx400m"
 LS_JAVA_OPTS="-Xms512m -Xmx512m"
 KIBANA_NODE_OPTS="--max_old_space_size=512"
+MEM_ES01_LIMIT=800M
+MEM_ES02_LIMIT=800M
+MEM_KIBANA_LIMIT=800M
+MEM_LOGSTASH_LIMIT=800M
+MEM_LIMIT=128M
+
 LOGSTASH_PORT=5044
 KIBANA_PORT=5601
 APM_PORT=8200
 ES_PORT=9200
 COMPOSE_HTTP_TIMEOUT=180
-TIME_ZONE=Europe/London
+
 ES_NET=192.168.100
 ES_IP=192.168.1.151
 
