--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -1,21 +1,21 @@
-
 #
 # === L - Logstash ===
 #
   logstash:
     depends_on:
-      kibana:
+      es02:
         condition: service_healthy
     # Ubuntu - logstash 
     image: logstash:${STACK_VERSION}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LOGSTASH_LIMIT}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-logstash"
-    hostname: "logstash.${APP_HOST}.${INT_NETWORK}"
+    hostname: "logstash.${ELASTIC_NETWORK}"
     networks:
-      # for traefik:
-      # default:
-      # local network:
-      intnet:
+      elastic:
         ipv4_address: ${ES_NET}.5
     # ports:
       # syslog access pipeline
@@ -45,7 +45,7 @@
       - logstash:/usr/share/logstash
     environment:
       - APP_HOST=${APP_HOST}
-      - APP_NET=${INT_NETWORK}
+      - APP_NET=${ELASTIC_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTIC_SSL_CERTIFICATEAUTHORITY=/usr/share/logstash/config/certs/ca.crt
@@ -57,42 +57,6 @@
       - STACK_VERSION=${STACK_VERSION}
       - ELASTIC_USERNAME=elastic
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.tcp.routers.logstash-access.tls=false"
-#       - "traefik.tcp.routers.logstash-access.rule=HostSNI(`*`)"
-#       - "traefik.tcp.routers.logstash-access.entrypoints=tcp-access"
-#       - "traefik.tcp.routers.logstash-access.tls.passthrough=true"
-#       - "traefik.tcp.routers.logstash-access.service=logstash-${APP_ID}-tcp-access"
-#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-access.loadbalancer.server.port=5000"
-#       - "traefik.udp.routers.logstash-access.entrypoints=udp-access"
-#       - "traefik.udp.routers.logstash-access.service=logstash-${APP_ID}-udp-access"
-#       - "traefik.udp.services.logstash-${APP_ID}-udp-access.loadbalancer.server.port=5000"
-#      
-#       - "traefik.tcp.routers.logstash-error.tls=false"
-#       - "traefik.tcp.routers.logstash-error.rule=HostSNI(`*`)"
-#       - "traefik.tcp.routers.logstash-error.entrypoints=tcp-error"
-#       - "traefik.tcp.routers.logstash-error.tls.passthrough=true"
-#       - "traefik.tcp.routers.logstash-error.service=logstash-${APP_ID}-tcp-error"
-#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-error.loadbalancer.server.port=5001"
-#       - "traefik.udp.routers.logstash-error.entrypoints=udp-error"
-#       - "traefik.udp.routers.logstash-error.service=logstash-${APP_ID}-udp-error"
-#       - "traefik.udp.services.logstash-${APP_ID}-udp-error.loadbalancer.server.port=5001"
-#      
-#       - "traefik.tcp.routers.logstash-elastic.tls=true"
-#       - "traefik.tcp.routers.logstash-elastic.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.tcp.routers.logstash-elastic.entrypoints=tcp-elastic"
-#       - "traefik.tcp.routers.logstash-elastic.tls.passthrough=true"
-#       - "traefik.tcp.routers.logstash-elastic.service=logstash-${APP_ID}-tcp-elastic"
-#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-elastic.loadbalancer.server.port=5044"
-#      
-#       - "traefik.tcp.routers.logstash-beat.tls=true"
-#       - "traefik.tcp.routers.logstash-beat.rule=HostSNI(`logstash.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.tcp.routers.logstash-beat.entrypoints=tcp-beat"
-#       - "traefik.tcp.routers.logstash-beat.tls.passthrough=true"
-#       - "traefik.tcp.routers.logstash-beat.service=logstash-${APP_ID}-tcp-beat"
-#       - "traefik.tcp.services.logstash-${APP_ID}-tcp-beat.loadbalancer.server.port=5045"
     healthcheck:
       test: ["CMD-SHELL", "curl -s -I http://${ES_NET}.5:9600 | grep -q 'HTTP/1.1 200 OK'"]
       # inspiration from https://github.com/elastic/stack-docker/blob/master/docker-compose.yml
