--- a/compose/docker-setup-mamka.yml
+++ b/compose/docker-setup-mamka.yml
@@ -1,4 +1,3 @@
-
 #
 # setup makes certs, create role and user and change passwords
 #
@@ -7,13 +6,14 @@
     # see https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
     container_name: "${APP_ID}-setup"
-    hostname: "setup.${APP_HOST}.${INT_NETWORK}"
+    hostname: "setup.${ELASTIC_NETWORK}"
     networks:
       # local network:
-      intnet:
+      elastic:
         ipv4_address: ${ES_NET}.30
     volumes:
       - ./certs:/usr/share/elasticsearch/config/certs
+      - ./extras/hosts/hosts:/etc/hosts
     user: "0"
     command: >
       bash -c '
@@ -39,7 +39,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - es01\n"\
-          "      - es01.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - es01.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.2\n"\
@@ -48,7 +48,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - es02\n"\
-          "      - es02.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - es02.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.3\n"\
@@ -57,7 +57,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - logstash\n"\
-          "      - logstash.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - logstash.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.5\n"\
@@ -66,7 +66,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - kibana\n"\
-          "      - kibana.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - kibana.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.6\n"\
@@ -75,7 +75,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - heartbeat\n"\
-          "      - heartbeat.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - heartbeat.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.7\n"\
@@ -83,7 +83,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - filebeat\n"\
-          "      - filebeat.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - filebeat.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.9\n"\
@@ -91,7 +91,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - metricbeat\n"\
-          "      - metricbeat.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - metricbeat.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.8\n"\
@@ -99,7 +99,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - apm-server\n"\
-          "      - apm-server.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - apm-server.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.10\n"\
@@ -107,7 +107,7 @@
           "    dns:\n"\
           "      - localhost\n"\
           "      - cerebro\n"\
-          "      - cerebro.${APP_HOST}.${INT_NETWORK}\n"\
+          "      - cerebro.${ELASTIC_NETWORK}\n"\
           "    ip:\n"\
           "      - 127.0.0.1\n"\
           "      - ${ES_NET}.20\n"\
@@ -132,21 +132,21 @@
         find . -type f -name logstash.pkcs8.key -exec chmod 644 \{\} \;; # logstash
         #
         echo "Waiting for Elasticsearch availability";
-        until curl -s --cacert config/certs/ca/ca.crt https://es01.${INT_NETWORK}:9200 | grep -q "missing authentication credentials"; do sleep 20; done;
+        until curl -s --cacert config/certs/ca/ca.crt https://es01:9200 | grep -q "missing authentication credentials"; do sleep 20; done;
         echo "Setting kibana_system password";
-        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01.${INT_NETWORK}:9200/_security/user/kibana_system/_password -d "{\"password\":\"${KIBANA_PASSWORD}\"}" | grep -q "^{}"; do sleep 30; done;
+        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01:9200/_security/user/kibana_system/_password -d "{\"password\":\"${KIBANA_PASSWORD}\"}" | grep -q "^{}"; do sleep 30; done;
         #
         # https://www.elastic.co/guide/en/fleet/master/grant-access-to-elasticsearch.html
         # https://www.elastic.co/guide/en/elasticsearch/reference/current/defining-roles.html
         # https://www.elastic.co/blog/configuring-ssl-tls-and-https-to-secure-elasticsearch-kibana-beats-and-logstash
         #
         echo "Setting logstash_system password";
-        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01.${INT_NETWORK}:9200/_security/user/logstash_system/_password -d "{\"password\":\"${LOGSTASH_PASSWORD}\"}" | grep -q "^{}"; do sleep 30; done;
+        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01:9200/_security/user/logstash_system/_password -d "{\"password\":\"${LOGSTASH_PASSWORD}\"}" | grep -q "^{}"; do sleep 30; done;
         echo "Create ${LOGSTASH_WRITE_ROLE}";
-        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01.${INT_NETWORK}:9200/_security/role/${LOGSTASH_WRITE_ROLE} -d "{\"cluster\":[\"manage_index_templates\",\"manage_ilm\"],\"run_as\":[\"logstash_system\",\"elastic\"],\"indices\":[{\"names\":[\"logstash*\",\"logs-*\",\"metrics-*\",\"filebeat-*\",\"metricbeat-*\"],\"privileges\":[\"read\",\"write\",\"create\",\"index\",\"create_index\",\"create_doc\",\"manage\",\"manage_ilm\",\"monitor\",\"auto_configure\",\"delete_index\",\"all\"]}]}" | grep -q "^{"; do sleep 30; done;
+        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01:9200/_security/role/${LOGSTASH_WRITE_ROLE} -d "{\"cluster\":[\"manage_index_templates\",\"manage_ilm\"],\"run_as\":[\"logstash_system\",\"elastic\"],\"indices\":[{\"names\":[\"logstash*\",\"logs-*\",\"metrics-*\",\"filebeat-*\",\"metricbeat-*\"],\"privileges\":[\"read\",\"write\",\"create\",\"index\",\"create_index\",\"create_doc\",\"manage\",\"manage_ilm\",\"monitor\",\"auto_configure\",\"delete_index\",\"all\"]}]}" | grep -q "^{"; do sleep 30; done;
         echo "Create ${LOGSTASH_USERNAME}";
-        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01.${INT_NETWORK}:9200/_security/user/${LOGSTASH_USERNAME} -d "{\"roles\":[\"${LOGSTASH_WRITE_ROLE}\", \"logstash_admin\", \"logstash_system\"],\"full_name\":\"Logstash Writer\",\"password\":\"${LOGSTASH_PASSWORD}\"}" | grep -q "^{"; do sleep 30; done;
-        curl -s -X GET --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} https://es01.${INT_NETWORK}:9200/?pretty | grep "cluster_uuid";
+        until curl -s -X POST --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} -H "Content-Type: application/json" https://es01:9200/_security/user/${LOGSTASH_USERNAME} -d "{\"roles\":[\"${LOGSTASH_WRITE_ROLE}\", \"logstash_admin\", \"logstash_system\"],\"full_name\":\"Logstash Writer\",\"password\":\"${LOGSTASH_PASSWORD}\"}" | grep -q "^{"; do sleep 30; done;
+        curl -s -X GET --cacert config/certs/ca/ca.crt -u elastic:${ELASTIC_PASSWORD} https://es01:9200/?pretty | grep "cluster_uuid";
         echo "All done!";
       '
     healthcheck:
@@ -154,3 +154,4 @@
       interval: 10s
       timeout: 10s
       retries: 120
+
