--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -60,4 +60,4 @@ setup:
     ssl:
       enabled: true
       certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
-      verification_mode: "${VERIFICATION_MODE}"
+      erification_mode: "${VERIFICATION_MODE}"
