--- a/compose/docker-es02.yml
+++ b/compose/docker-es02.yml
@@ -4,14 +4,15 @@
         condition: service_healthy
     # Ubuntu - elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_ES02_LIMIT}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-es02"
-    hostname: "es02.${APP_HOST}.${INT_NETWORK}"
+    hostname: "es02.${ELASTIC_NETWORK}"
     networks:
-      # for traefik:
-      # default:
-      # local network:
-      intnet:
+      elastic:
         ipv4_address: ${ES_NET}.3
     # ports:
     #   - 9201:9201
@@ -37,23 +38,8 @@
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ES_JAVA_OPTS=${ES02_JAVA_OPTS}
       - ES_NODES=${ES_NODES}
-      - ELASTIC_APM_ENVIRONMENT=${STAGE}
-      - ELASTIC_APM_SERVER_URL=${ELASTIC_APM_SERVER_URL}
-      - ELASTIC_APM_SERVICE_NAME=${APP-HOST}-${INT_NETWORK}
-      - ELASTIC_APM_SERVICE_NODE_NAME=${APP-HOST}-${INT_NETWORK}-es02
       - LICENSE=${LICENSE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.es02-${APP_ID}-public.rule=Host(`es02.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.es02-${APP_ID}-public.entrypoints=https"
-#       - "traefik.http.routers.es02-${APP_ID}-public.tls=true"
-#       # - "traefik.http.routers.es02-${APP_ID}-public.middlewares=es02-${APP_ID}@docker"
-#       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.scheme=https"
-#       # - "traefik.http.middlewares.es02-${APP_ID}.redirectscheme.port=9201"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.port=9201"
-#       - "traefik.http.services.elasticsearch-${APP_ID}.loadbalancer.server.scheme=http"
     ulimits:
       memlock:
         soft: -1
