--- a/compose/docker-filebeat.yml
+++ b/compose/docker-filebeat.yml
@@ -1,4 +1,3 @@
-
 #
 # === Filebeat ===
 #
@@ -8,24 +7,24 @@
         condition: service_healthy
     # Ubuntu - filebeat
     image: docker.elastic.co/beats/filebeat:${STACK_VERSION}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-filebeat"
-    hostname: "filebeat.${APP_HOST}.${INT_NETWORK}"
+    hostname: "filebeat.${ELASTIC_NETWORK}"
     networks:
-      # for traefik:
-      #  default:
-      # local network:
-      intnet:
+      elastic:
         ipv4_address: ${ES_NET}.9
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
-      # - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
-      # - /proc:/hostfs/proc:ro
       - /:/hostfs:ro
       - ./certs:/usr/share/filebeat/certs
       - ./extras/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - ./extras/filebeat/filebeat:/root/bin
       - ./logs/filebeat:/usr/share/filebeat/logs
       - ./logs/apm:/usr/share/filebeat/elogs/apm-server
       - ./logs/es01:/usr/share/filebeat/elogs/es01
@@ -36,7 +35,7 @@
       - filebeat:/usr/share/filebeat
     environment:
       - APP_HOST=${APP_HOST}
-      - APP_NET=${INT_NETWORK}
+      - APP_NET=${ELASTIC_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
@@ -46,11 +45,4 @@
       - LOGSTASH_SERVER_CERT=/usr/share/filebeat/certs/logstash/logstash.crt
       - LOGSTASH_SERVER_CERT_KEY=/usr/share/filebeat/certs/logstash/logstash.key
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.filebeat-${APP_ID}.rule=Host(`filebeat.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.filebeat-${APP_ID}.entrypoints=https"
-#       - "traefik.http.routers.filebeat-${APP_ID}.tls=true"
-#       - "traefik.http.services.filebeat-${APP_ID}.loadbalancer.server.port=5066"
-#       - "traefik.http.services.filebeat-${APP_ID}.loadbalancer.server.scheme=http"
+
