--- a/compose/docker-head.yml
+++ b/compose/docker-head.yml
@@ -13,13 +13,9 @@ networks:
   default:
     external: true
     name: ${DOCKER_NETWORK}
-  intnet:
-    external: false
-    name: ${INT_NETWORK}
-    driver: bridge
-    ipam:
-      config:
-        - subnet: ${ES_NET}.0/24
+  elastic:
+    external: true
+    name: ${ELASTIC_NETWORK}
 
 services:
 
