--- a/compose/docker-metricbeat.yml
+++ b/compose/docker-metricbeat.yml
@@ -1,4 +1,3 @@
-
 #
 # === Metricbeat ===
 #
@@ -8,44 +7,35 @@
         condition: service_healthy
     # Ubuntu - metricbeat
     image: docker.elastic.co/beats/metricbeat:${STACK_VERSION}
+    deploy:
+      resources:
+        limits:
+          memory: ${MEM_LIMIT}
     restart: ${DOCKER_RESTART_POLICY}
     container_name: "${APP_ID}-metricbeat"
-    hostname: "metricbeat.${APP_HOST}.${INT_NETWORK}"
-    #  user: root
+    hostname: "metricbeat.${ELASTIC_NETWORK}"
     networks:
-      # for traefik:
-      # default:
-      # local network:
-      intnet:
+      elastic:
         ipv4_address: ${ES_NET}.8
     user: root
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./extras/hosts/hosts:/etc/hosts
-      # - /sys/fs/cgroup:/hostfs/sys/fs/cgroup:ro
       - /:/hostfs:ro
       - ./certs:/usr/share/metricbeat/certs
       - ./extras/metricbeat/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
+      - ./extras/metricbeat/metricbeat:/root/bin
       - ./logs/metricbeat:/usr/share/metricbeat/logs
       - metricbeat:/usr/share/metricbeat
     environment:
       - APP_HOST=${APP_HOST}
-      - APP_NET=${INT_NETWORK}
+      - APP_NET=${ELASTIC_NETWORK}
       - CLUSTER_NAME=${CLUSTER_NAME}
       - CLUSTER_UUID=${CLUSTER_UUID}
       - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/metricbeat/certs/ca/ca.crt
       - ES_NET=${ES_NET}
-      - LOGSTASH_SERVER_CERT=/usr/share/metricbeat/certs/logstash/logstash.crt
-      - LOGSTASH_SERVER_CERT_KEY=/usr/share/metricbeat/certs/logstash/logstash.key
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-#     labels:
-#       - "traefik.enable=true"
-#       - "traefik.docker.network=${DOCKER_NETWORK}"
-#       - "traefik.http.routers.metricbeat-${APP_ID}.rule=Host(`metricbeat.${APP_HOST}.${INT_NETWORK}`)"
-#       - "traefik.http.routers.metricbeat-${APP_ID}.entrypoints=https"
-#       - "traefik.http.routers.metricbeat-${APP_ID}.tls=true"
-#       - "traefik.http.services.metricbeat-${APP_ID}.loadbalancer.server.port=5066"
-#       - "traefik.http.services.metricbeat-${APP_ID}.loadbalancer.server.scheme=http"
+
