--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -11,14 +11,12 @@ xpack:
     http:
       ssl:
         enabled: true
-        verification_mode: "none"
-        # verification_mode: "${VERIFICATION_MODE}"
+        verification_mode: "${VERIFICATION_MODE}"
         certificate_authorities: "certs/ca/ca.crt"
     transport:
       ssl:
         enabled: true
-        verification_mode: "none"
-        # verification_mode: "${VERIFICATION_MODE}"
+        verification_mode: "${VERIFICATION_MODE}"
         certificate_authorities: "certs/ca/ca.crt"
 
 # logger.org.elasticsearch.discovery: INFO
