--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -7,16 +7,16 @@ bootstrap.memory_lock: true
 xpack:
   license.self_generated.type: "${LICENSE}"
   security:
-    authc.api_key.enabled: true        
+    authc.api_key.enabled: true
     http:
       ssl:
         enabled: true
-        verification_mode: "${VERIFICATION_MODE}"
+        verification_mode: "certificate"
         certificate_authorities: "certs/ca/ca.crt"
     transport:
       ssl:
         enabled: true
-        verification_mode: "${VERIFICATION_MODE}"
+        verification_mode: "certificate"
         certificate_authorities: "certs/ca/ca.crt"
 
 # logger.org.elasticsearch.discovery: INFO
