--- a/compose/docker-setup-eliasondrej.yml
+++ b/compose/docker-setup-eliasondrej.yml
@@ -35,6 +35,14 @@
           echo "Creating certs";
           echo -ne \
           "instances:\n"\
+          "  - name: traefik\n"\
+          "    dns:\n"\
+          "      - localhost\n"\
+          "      - traefik\n"\
+          "      - traefik.${ELASTIC_NETWORK}\n"\
+          "    ip:\n"\
+          "      - 127.0.0.1\n"\
+          "      - ${ES_NET}.254\n"\
           "  - name: es01\n"\
           "    dns:\n"\
           "      - localhost\n"\
