--- a/extras/elasticsearch/elasticsearch.yml
+++ b/extras/elasticsearch/elasticsearch.yml
@@ -2,12 +2,12 @@ cluster.initial_master_nodes: "${ES_NODES}"
 
 cluster.name: "${CLUSTER_NAME}"
 node.roles: [master, data, ingest]
-bootstrap.memory_lock: true
+bootstrap.memory_lock: false
 
 xpack:
   license.self_generated.type: "${LICENSE}"
   security:
-    authc.api_key.enabled: true
+    # authc.api_key.enabled: true
     http:
       ssl:
         enabled: true
