--- a/extras/metricbeat/metricbeat/beat-xpack.yml
+++ b/extras/metricbeat/metricbeat/beat-xpack.yml
@@ -15,3 +15,4 @@
   # ssl:
   #  enabled: true
   #  certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+  #  verification_mode: "${VERIFICATION_MODE}"
