--- a/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
+++ b/extras/metricbeat/metricbeat/elasticsearch-xpack.yml
@@ -13,3 +13,5 @@
   ssl:
     enabled: true
     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+    verification_mode: "${VERIFICATION_MODE}"
+
