--- a/extras/metricbeat/metricbeat/kibana-xpack.yml
+++ b/extras/metricbeat/metricbeat/kibana-xpack.yml
@@ -10,4 +10,4 @@
   ssl:
     enabled: true
     certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-
+    verification_mode: "${VERIFICATION_MODE}"
