--- a/extras/kibana/kibana.yml
+++ b/extras/kibana/kibana.yml
@@ -19,9 +19,9 @@ monitoring:
   ui:
     enabled: true
     ccs.enabled: false
-    # container:
-    #  elasticsearch.enabled: true
-    #  logstash.enabled: true
+    container:
+      elasticsearch.enabled: true
+      logstash.enabled: true
   kibana.collection.enabled: false
 
 # https://www.elastic.co/guide/en/kibana/current/settings.html#elasticsearch-ssl-cert-key
