--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -19,11 +19,11 @@ output:
     enabled: true
     hosts: ["logstash.${APP_NET}:5045"]
     ssl:
-      certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
       certificate: "${LOGSTASH_SERVER_CERT}"
       key: "${LOGSTASH_SERVER_CERT_KEY}"
-      verification_mode: "${VERIFICATION_MODE}"
-      # verification_mode: "none"
+      # verification_mode: "${VERIFICATION_MODE}"
+      verification_mode: "none"
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
