--- a/extras/logstash/beat.conf
+++ b/extras/logstash/beat.conf
@@ -2,12 +2,12 @@
 input {
   beats {
     port => 5045
-    ssl => true
-    ssl_certificate_authorities => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
-    ssl_certificate => "/usr/share/logstash/config/certs/logstash.crt"
-    ssl_key => "/usr/share/logstash/config/certs/logstash.key"
-#    ssl_verify_mode => "force_peer"
-    ssl_verify_mode => "none"
+#     ssl => true
+#     ssl_certificate_authorities => ["${ELASTIC_SSL_CERTIFICATEAUTHORITY}"]
+#     ssl_certificate => "/usr/share/logstash/config/certs/logstash.crt"
+#     ssl_key => "/usr/share/logstash/config/certs/logstash.key"
+# #    ssl_verify_mode => "force_peer"
+#     ssl_verify_mode => "none"
   }
 }
 
