--- a/extras/filebeat/filebeat.yml
+++ b/extras/filebeat/filebeat.yml
@@ -18,12 +18,12 @@ output:
   logstash:
     enabled: true
     hosts: ["logstash.${APP_NET}:5045"]
-    ssl:
-      # certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-      certificate: "${LOGSTASH_SERVER_CERT}"
-      key: "${LOGSTASH_SERVER_CERT_KEY}"
+    # ssl:
+      ## certificate_authorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      # certificate: "${LOGSTASH_SERVER_CERT}"
+      # key: "${LOGSTASH_SERVER_CERT_KEY}"
       # verification_mode: "${VERIFICATION_MODE}"
-      verification_mode: "none"
+      # verification_mode: "none"
    
   # for /filebeat -e setup --dashboards:
   # elasticsearch:
@@ -53,11 +53,12 @@ setup:
       verification_mode: "${VERIFICATION_MODE}"
   
   kibana:
-    host: "https://kibana.${APP_NET}:5601"
+    host: "http://kibana.${APP_NET}:8080"
+    # host: "https://kibana.${APP_NET}:5601"
     username: '${ELASTICSEARCH_USERNAME}'
     password: '${ELASTICSEARCH_PASSWORD}'
-    protocol: "https"
-    ssl:
-      enabled: true
-      certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
-      erification_mode: "${VERIFICATION_MODE}"
+    protocol: "http"
+    # ssl:
+    #  enabled: true
+    #  certificate_authorities: ['${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}']
+    #  erification_mode: "${VERIFICATION_MODE}"
