--- a/extras/kibana/kibana.yml
+++ b/extras/kibana/kibana.yml
@@ -4,13 +4,15 @@ server:
   host: "0.0.0.0"
   shutdownTimeout: "5s"
   socketTimeout: "240000"
-  publicBaseUrl: "https://${KIBANA_HOST}:5601"
+  publicBaseUrl: "http://${KIBANA_HOST}:5601"
   port: 5601
   ssl:
-    enabled: true
-    certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
-    certificate: "${ELASTICSEARCH_SSL_SERVER_CERT}" 
-    key: "${ELASTICSEARCH_SSL_SERVER_CERT_KEY}"
+    enabled: false
+  #   redirectHttpFromPort: 443
+  #   enabled: true
+  #   certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+  #   certificate: "${ELASTICSEARCH_SSL_SERVER_CERT}" 
+  #   key: "${ELASTICSEARCH_SSL_SERVER_CERT_KEY}"
 
 monitoring:
   # https://www.elastic.co/guide/en/kibana/master/monitoring-settings-kb.html
